retrofit: build; MIT license; docs